Fix T35952: Switching a single handle to free would lock the others alignment